<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myapplication.gpsappworktest.ui.ExitActivity">


    <LinearLayout
        android:id="@+id/relativeLayoutExit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_marginVertical="@dimen/_100sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imageViewExit"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_above="@id/textViewMapTypes"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:src="@drawable/exitimagebg" />


        <TextView
            android:id="@+id/textViewMapTypes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/textViewNavigation"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="Exit"
            android:textColor="#000000"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textViewNavigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayoutBelow"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/are_you_sure_you_want_to_exit"
            android:textSize="@dimen/_11sdp" />


        <LinearLayout
            android:id="@+id/linearLayoutBelow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:id="@+id/relativeLayoutNo"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/exityesbg"
                android:elevation="@dimen/_3sdp">

                <TextView
                    android:id="@+id/textViewStop"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_alignParentBottom="true"
                    android:elevation="@dimen/_3sdp"
                    android:gravity="center"
                    android:text="@string/no"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_11sdp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relativeLayoutYes"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/exitnobg">

                <TextView
                    android:id="@+id/textViewYes"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_alignParentBottom="true"
                    android:elevation="@dimen/_3sdp"
                    android:gravity="center"
                    android:text="@string/yes"
                    android:textColor="#346AFF"
                    android:textSize="@dimen/_11sdp" />

            </RelativeLayout>


        </LinearLayout>


    </LinearLayout>


    <FrameLayout
        android:id="@+id/nativeAdContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>