<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.myapplication.gpsappworktest.ui.AreaCalculatorActivity">

    <FrameLayout
        android:id="@+id/adContainer"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/relativeLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:gravity="center"
        android:layout_below="@+id/adContainer"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:gravity="center"
            android:text="@string/area_calculator"
            android:textColor="#000000"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_10sdp"
            android:contentDescription="@string/area_calculator"
            app:srcCompat="@drawable/leftarrowbg" />

    </RelativeLayout>

    <View
        android:id="@+id/viewOne"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@id/relativeLayoutTop"
        android:background="#C5C5C5"
        app:layout_constraintTop_toBottomOf="@id/relativeLayoutTop" />

    <com.mapbox.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/relativeLayoutAreaCalculatorBottom"
        android:layout_below="@id/viewOne"
        app:mapbox_logoGravity="bottom" />

    <RelativeLayout
        android:id="@+id/relativeLayoutAreaCalculatorBottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/relativelayoutlocationroutebg"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llAreaHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/_12sdp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/areaText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/readexpro_semibold"
                android:includeFontPadding="true"
                android:text="@string/tap_on_map"
                android:textColor="#000000"
                android:textSize="@dimen/_14sdp" />

            <ImageView
                android:id="@+id/ivInfo"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:contentDescription="@string/area_calculator"
                android:src="@drawable/info_icon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llAreaHeader"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:id="@+id/linearLayoutReset"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50sdp"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables,UselessParent">

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/area_calculator"
                    android:src="@drawable/refresh_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/readexpro_regular"
                    android:includeFontPadding="false"
                    android:text="@string/reset"
                    android:textColor="#3491ff"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutUndo"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50sdp"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables,UselessParent">

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/area_calculator"
                    android:src="@drawable/restart_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/readexpro_regular"
                    android:includeFontPadding="false"
                    android:text="@string/undo"
                    android:textColor="#3491ff"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutCopy"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50sdp"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables,UselessParent">

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/area_calculator"
                    android:src="@drawable/copy_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/readexpro_regular"
                    android:includeFontPadding="false"
                    android:text="@string/copy"
                    android:textColor="#3491ff"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutShare"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50sdp"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables,UselessParent">

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/area_calculator"
                    android:src="@drawable/share_icon_new" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/readexpro_regular"
                    android:includeFontPadding="false"
                    android:text="@string/share"
                    android:textColor="#3491ff"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>